--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "axios": "^1.13.2",
     "react": "19.2.0",
     "react-native": "0.83.1",
+    "react-native-android-location-enabler": "^3.0.1",
     "react-native-geolocation-service": "^5.3.1",
     "react-native-gesture-handler": "^2.30.0",
     "react-native-permissions": "^5.4.4",
